--- a/config/config.yml
+++ b/config/config.yml
@@ -1,21 +1,20 @@
 # config/config.yml
 
 samples:
-  - Alternaria_T7_1
-  - Alternaria_T7_2
-  - Alternaria_T7_3
-  - Alternaria_T7_4
-  - Control_T7_1
-  - Control_T7_2
-  - Control_T7_3
-  - Control_T7_4
+  - Alternaria_T14_1
+  - Alternaria_T14_2
+  - Alternaria_T14_3
+  - Control_T14_1
+  - Control_T14_2
+  - Control_T14_3
+  - Control_T14_4
 
 # Reference Genomes and Annotations
 references:
-  glygenome: "resources/genomes/GCF_000004515.6_Glycine_max_v4.0_genomic.fna"
-  altgenome: "resources/genomes/GCF_001642055.1_Altal1_genomic.fna"
-  glyannotation: "resources/annotations/genomic_Gmax.gtf"
-  altannotation: "resources/annotations/genomic_Aalt.gtf"
+  glygenome: "resources/genomes/Gmax_880_v6.0.fa"
+  altgenome: "resources/genomes/Alternaria_alternata_gca_004154755.ASM415475v1.dna.toplevel.fa"
+  glyannotation: "resources/annotations/Gmax_880_Wm82.a6.v1.gene.gff3"
+  altannotation: "resources/annotations/Alternaria_alternata_gca_004154755.ASM415475v1.60.gtf"
 
 # Parameters for key tools
 params:
@@ -25,4 +24,4 @@ params:
 
 # Design matrix for Differential Expression
 design:
-  condition: [Alternaria_T7_1, Alternaria_T7_2, Alternaria_T7_3, Alternaria_T7_4, Control_T7_1, Control_T7_2, Control_T7_3, Control_T7_4]
+  condition: [Alternaria_T14_1, Alternaria_T14_2, Alternaria_T14_3, Control_T14_1, Control_T14_2, Control_T14_3, Control_T14_4]
